--- a/README
+++ b/README
@@ -7,3 +7,4 @@ Arduino Uno (ATMega328 running C, connected over USB serial)
 node.js local server
 Chrome extension, Spotify app, Android app
 node.js cloud server
+Android app
